--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Classic Clock</title>
-
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
-	<script type="text/javascript" src="sketch.js"></script>
+	<script type="text/javascript" src="js/p5.min.js"></script>
+	<script type="text/javascript" src="js/p5.dom.min.js"></script>
+	<script type="text/javascript" src="js/p5.sound.min.js"></script>
+	<script type="text/javascript" src="js/sketch.js"></script>
 </head>
 <body>
 </body>
